2020-04-25  Mark Wielaard  <mark@klomp.org>

	* asm_end.c (text_end): Call fflush instead of fclose.

2020-01-08  Mark Wielaard  <mark@klomp.org>

	* libasm.h: Don't include libebl.h. Define an opaque Ebl handle.
	* libasmP.h: Do include libebl.h.

2019-08-28  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (libasm_so_DEPS): Replace libebl.a with libebl_pic.a.

2019-03-06  Mark Wielaard  <mark@klomp.org>

	* asm_end.c (binary_end): Check return value of gelf_update_ehdr.

2018-10-19  Mark Wielaard  <mark@klomp.org>

	* disasm_cb.c (read_symtab_exec): Check sh_entsize is not zero.

2018-07-04  Ross Burton <ross.burton@intel.com>

	* asm_end.c: Remove error.h include.
	* asm_newscn.c: Likewise.
	* i386_gendis.c: Likewise and add system.h include.
	* i386_lex.l: Likewise.
	* i386_parse.y: Likewise.

2017-02-27  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Use dso_LDFLAGS.

2017-02-17  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Add libasm_so_DEPS to specify external libraries
	that have to be linked in, and libasm_so_LIBS to specify the
	archives libasm consists of. The dependencies include libeu.a.
	(libasm_so_LDLIBS): Add $(libasm_so_DEPS).
	(libasm_so$(EXEEXT): Use $(libasm_so_LIBS),
	add --no-undefined,-z,defs,-z,relro,
	drop the manual enumeration of dependencies,
	specify the correct path for libasm.map.

2017-04-27  Ulf Hermann  <ulf.hermann@qt.io>

	* asm_end.c (binary_end): Fix nesting of braces.

2017-02-12  Mark Wielaard  <mjw@redhat.com>

	* asm_newsym.c (asm_newsym): Increase TEMPSYMLEN to 13.

2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>

	* disasm_str.c: Include system.h.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* asm_align.c: Remove sys/param.h include.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (AM_CPPFLAGS): Add libdwelf.
	(libasm.so): Add libdw.
	* asm_begin.c (prepare_binary_output): Use dwelf_strtab instead of
	ebl_strtab.
	* asm_end.c (binary_end): Likewise.
	(__libasm_finictx): Likewise.