@@ -1,3 +1,9 @@
+2020-07-05  Mark Wielaard  <mark@klomp.org>
+
+	* run-test-includes.sh: New test.
+	* Makefile.am (TESTS): Add run-test-includes.sh.
+	(EXTRA_DIST): Likewise.
+
 2020-07-03  Alice Zhang  <alizhang@redhat.com>
 
 	* run-debuginfod-find.sh: Add scheme free url testcase.
