@@ -1,3 +1,7 @@
+2020-07-05  Mark Wielaard  <mark@klomp.org>
+
+	* libasm.h: Include gelf.h.
+
 2020-04-25  Mark Wielaard  <mark@klomp.org>
 
 	* asm_end.c (text_end): Call fflush instead of fclose.
